fix collapsed

--- a/itou/static/css/itou.css
+++ b/itou/static/css/itou.css
@@ -323,16 +323,19 @@ Usage:
     /* icon arrow-down-s-fill from remix icon */
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='none' d='M0 0h24v24H0z'/%3E%3Cpath d='M12 16l-6-6h12z'/%3E%3C/svg%3E");
     /* h6 font size = 1rem */
-    background-size: 24px 24px;
-    height: 8px;
+    background-size: 16px 16px;
+    height: 16px;
     width: 24px;
-    background-position-y: center;
-    margin-left: 14px;
+    background-position-y: bottom;
+    margin-left: 8px;
     transform: rotate(180deg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .collapse-caret.collapsed>h6::after {
-    height: 15px;
+    background-position-y: center;
+    height: 12px;
     transform: rotate(0deg);
 }
 
